--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
     <link href="{{ url_for('static', filename='css/comprehensive-theme-fixes.css') }}?v=20250824" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/contrast-fixes.css') }}?v=20250824" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/text-contrast.css') }}?v=20250824" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/accessibility_fixes.css') }}">
     
     <!-- Navigation fixes - comprehensive styling for all navigation elements -->
     <link href="{{ url_for('static', filename='css/navigation-fixes.css') }}?v=20250826" rel="stylesheet">
